hero: fix z-index to hero arrow btn:

--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -48,7 +48,7 @@
 	background-image: url(../assets/hero-btn-arrow.svg);
 	background-repeat: no-repeat;
 	background-position: center;
-	z-index: 100;
+	z-index: 1;
 }
 
 // Right slider
